@@ -1,4 +1,8 @@
 2010-08-10  Robert Larice
+ * src/spicelib/analysis/tfanal.c :
+    drop (GENinstance*) casts, which are no longer necessary
+
+2010-08-10  Robert Larice
  * src/frontend/spiceif.c' :
     drop (INPtables*) casts, which are no longer necessary
 
